# Generated by Django 4.2.16 on 2025-09-08 22:09

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Plano',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=50, unique=True)),
                ('descricao', models.TextField(blank=True)),
                ('preco', models.DecimalField(decimal_places=2, max_digits=10)),
                ('limite_transacoes', models.IntegerField(blank=True, null=True)),
                ('limite_empresas', models.IntegerField(default=1)),
                ('permite_relatorios', models.BooleanField(default=False)),
                ('permite_exportacao', models.BooleanField(default=False)),
                ('permite_notas_fiscais', models.BooleanField(default=False)),
                ('ativo', models.BooleanField(default=True)),
                ('criado_em', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'verbose_name': 'Plano',
                'verbose_name_plural': 'Planos',
                'db_table': 'planos',
                'ordering': ['preco'],
            },
        ),
        migrations.CreateModel(
            name='Assinatura',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.CharField(choices=[('ativa', 'Ativa'), ('cancelada', 'Cancelada'), ('inadimplente', 'Inadimplente'), ('expirada', 'Expirada')], default='ativa', max_length=15)),
                ('data_inicio', models.DateField()),
                ('data_fim', models.DateField(blank=True, null=True)),
                ('valor_pago', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('gateway_pagamento', models.CharField(blank=True, max_length=50)),
                ('id_transacao_gateway', models.CharField(blank=True, max_length=255)),
                ('criado_em', models.DateTimeField(auto_now_add=True)),
                ('atualizado_em', models.DateTimeField(auto_now=True)),
                ('plano', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='assinaturas.plano')),
                ('usuario', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='assinatura', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Assinatura',
                'verbose_name_plural': 'Assinaturas',
                'db_table': 'assinaturas',
                'ordering': ['-criado_em'],
            },
        ),
    ]
