//================================//
//     MODELAGEM DE DADOS (v8)    //
//   Normalizada e Sem Repetição   //
//================================//

Project financas_app {
  database_type: 'PostgreSQL'
  Note: 'Modelagem normalizada para aplicativo de finanças empresariais.'
}

// --- ENUMS ---

enum status_assinatura {
  ativa
  cancelada
  inadimplente
  expirada
}

enum tipo_empresa {
  MEI
  ME
  EPP
  LTDA
  SA
}

enum tipo_transacao {
  entrada
  saida
}

enum status_transacao {
  pendente
  confirmada
  cancelada
}

enum forma_pagamento {
  dinheiro
  pix
  cartao_credito
  cartao_debito
  boleto
  transferencia
}

enum frequencia_recorrencia {
  semanal
  mensal
  bimestral
  trimestral
  semestral
  anual
}

enum tema_usuario {
  claro
  escuro
  auto
}

enum formato_data_usuario {
  "DD/MM/YYYY"
  "MM/DD/YYYY"
  "YYYY-MM-DD"
}

enum status_nota_fiscal {
  uploaded
  processing
  processed
  failed
}

enum tipo_arquivo {
  XML
  PDF
}

//================================//
//           TABELAS              //
//================================//

// --- USUÁRIOS ---

Table usuarios {
  id bigint [pk]
  nome varchar(255) [not null]
  email varchar(255) [unique, not null]
  senha_hash varchar(255) [not null]
  ativo boolean [default: true]
  criado_em timestamp [default: `now()`]
  atualizado_em timestamp [default: `now()`]
  
  indexes {
    email [unique]
    ativo
  }
}

Table configuracoes_usuario {
  id bigint [pk]
  usuario_id bigint [unique, not null]
  tema tema_usuario [default: 'auto']
  moeda varchar(3) [default: 'BRL']
  formato_data formato_data_usuario [default: '"DD/MM/YYYY"']
  fuso_horario varchar(50) [default: 'America/Sao_Paulo']
  notificacoes_email boolean [default: true]
  notificacoes_push boolean [default: true]
  backup_automatico boolean [default: false]
  criado_em timestamp [default: `now()`]
  atualizado_em timestamp [default: `now()`]
  
  indexes {
    usuario_id [unique]
  }
}

Table tokens_recuperacao {
  id bigint [pk]
  usuario_id bigint [not null]
  token varchar(255) [unique, not null]
  usado boolean [default: false]
  expira_em timestamp [not null]
  criado_em timestamp [default: `now()`]
  
  indexes {
    token [unique]
    usuario_id
    expira_em
  }
}

Table logs_atividade {
  id bigint [pk]
  usuario_id bigint [not null]
  acao varchar(100) [not null]
  detalhes json
  ip_address varchar(45)
  user_agent text
  criado_em timestamp [default: `now()`]
  
  indexes {
    usuario_id
    acao
    criado_em
    (usuario_id, criado_em)
  }
}

// --- ASSINATURAS ---

Table planos {
  id bigint [pk]
  nome varchar(50) [unique, not null]
  descricao text
  preco decimal(10, 2) [not null]
  limite_transacoes integer
  limite_empresas integer
  permite_relatorios boolean [default: false]
  permite_exportacao boolean [default: false]
  permite_notas_fiscais boolean [default: false]
  ativo boolean [default: true]
  criado_em timestamp [default: `now()`]
  
  indexes {
    nome [unique]
    ativo
  }
}

Table assinaturas {
  id bigint [pk]
  usuario_id bigint [unique, not null]
  plano_id bigint [not null]
  status status_assinatura [not null, default: 'ativa']
  data_inicio date [not null]
  data_fim date
  valor_pago decimal(10, 2)
  gateway_pagamento varchar(50)
  id_transacao_gateway varchar(255)
  criado_em timestamp [default: `now()`]
  atualizado_em timestamp [default: `now()`]
  
  indexes {
    usuario_id [unique]
    plano_id
    status
    (data_inicio, data_fim)
  }
}

// --- EMPRESAS ---

Table empresas {
  id bigint [pk]
  usuario_id bigint [not null]
  cnpj varchar(18) [not null]
  razao_social varchar(255) [not null]
  nome_fantasia varchar(255)
  tipo_empresa tipo_empresa [not null]
  ativa boolean [default: true]
  empresa_padrao boolean [default: false]
  criado_em timestamp [default: `now()`]
  atualizado_em timestamp [default: `now()`]
  
  indexes {
    usuario_id
    cnpj
    ativa
    (usuario_id, cnpj) [unique]
    (usuario_id, empresa_padrao)
  }
}

// --- FORNECEDORES ---

Table fornecedores {
  id bigint [pk]
  empresa_id bigint [not null]
  cnpj varchar(18) [not null]
  razao_social varchar(255) [not null]
  nome_fantasia varchar(255)
  email varchar(255)
  telefone varchar(20)
  endereco text
  criado_automaticamente boolean [default: false]
  ativo boolean [default: true]
  criado_em timestamp [default: `now()`]
  atualizado_em timestamp [default: `now()`]
  
  indexes {
    empresa_id
    cnpj
    (empresa_id, cnpj) [unique]
    ativo
  }
}

// --- CATEGORIAS ---

Table categorias {
  id bigint [pk]
  empresa_id bigint [not null]
  nome varchar(100) [not null]
  descricao text
  cor varchar(7)
  icone varchar(50)
  tipo_transacao tipo_transacao [not null]
  ativa boolean [default: true]
  categoria_padrao boolean [default: false]
  criado_em timestamp [default: `now()`]
  
  indexes {
    empresa_id
    tipo_transacao
    ativa
    (empresa_id, nome) [unique]
  }
}

// --- TRANSAÇÕES ---

Table transacoes {
  id bigint [pk]
  empresa_id bigint [not null]
  categoria_id bigint
  fornecedor_id bigint
  descricao varchar(255) [not null]
  valor decimal(12, 2) [not null]
  data_transacao date [not null]
  tipo_transacao tipo_transacao [not null]
  status status_transacao [default: 'confirmada']
  observacoes text
  numero_documento varchar(100)
  forma_pagamento forma_pagamento
  recorrente boolean [default: false]
  frequencia_recorrencia frequencia_recorrencia
  criado_em timestamp [default: `now()`]
  atualizado_em timestamp [default: `now()`]
  
  indexes {
    empresa_id
    categoria_id
    fornecedor_id
    data_transacao
    tipo_transacao
    status
    (empresa_id, data_transacao)
    (data_transacao, tipo_transacao)
  }
}

// --- NOTAS FISCAIS ---

Table notas_fiscais {
  id bigint [pk]
  empresa_id bigint [not null]
  fornecedor_id bigint
  transacao_id bigint
  arquivo_original varchar(255) [not null]
  caminho_arquivo varchar(500) [not null]
  tipo_arquivo tipo_arquivo [not null]
  status status_nota_fiscal [not null, default: 'uploaded']
  chave_acesso varchar(44)
  cnpj_emissor varchar(18)
  razao_social_emissor varchar(255)
  valor_total decimal(12, 2)
  data_emissao date
  dados_extraidos json
  erro_processamento text
  criado_em timestamp [default: `now()`]
  processado_em timestamp
  
  indexes {
    empresa_id
    fornecedor_id
    transacao_id
    status
    chave_acesso [unique]
    cnpj_emissor
    data_emissao
  }
}

// --- ANEXOS ---

Table anexos_transacao {
  id bigint [pk]
  transacao_id bigint [not null]
  nome_arquivo varchar(255) [not null]
  tipo_arquivo varchar(50) [not null]
  tamanho_arquivo integer [not null]
  caminho_arquivo varchar(500) [not null]
  criado_em timestamp [default: `now()`]
  
  indexes {
    transacao_id
  }
}

//================================//
//        RELACIONAMENTOS         //
//================================//

// Usuários
Ref: configuracoes_usuario.usuario_id > usuarios.id [delete: cascade]
Ref: tokens_recuperacao.usuario_id > usuarios.id [delete: cascade]
Ref: logs_atividade.usuario_id > usuarios.id [delete: cascade]

// Assinaturas
Ref: assinaturas.usuario_id > usuarios.id [delete: cascade]
Ref: assinaturas.plano_id > planos.id [delete: restrict]

// Empresas
Ref: empresas.usuario_id > usuarios.id [delete: cascade]

// Fornecedores
Ref: fornecedores.empresa_id > empresas.id [delete: cascade]

// Categorias
Ref: categorias.empresa_id > empresas.id [delete: cascade]

// Transações
Ref: transacoes.empresa_id > empresas.id [delete: cascade]
Ref: transacoes.categoria_id > categorias.id [delete: set null]
Ref: transacoes.fornecedor_id > fornecedores.id [delete: set null]

// Notas Fiscais
Ref: notas_fiscais.empresa_id > empresas.id [delete: cascade]
Ref: notas_fiscais.fornecedor_id > fornecedores.id [delete: set null]
Ref: notas_fiscais.transacao_id > transacoes.id [delete: set null]

// Anexos
Ref: anexos_transacao.transacao_id > transacoes.id [delete: cascade]